# dvhelper

./: .gitignore  README.md  STYLE_GUIDE.md  actress_alias.json  dvhelper.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  tests-codecov.yml
i18n/: babel.config  make.bat  make.py
i18n/en_US/LC_MESSAGES/: dvhelper.po
make/: dvhelper.spec  get_commit_history.ps1  update_version.py  version_info.txt
tests/: conftest.py  test_config.py  test_dvhelper.py  test_movie_info.py  test_movie_parser.py  test_movie_scraper.py  test_nfo_generator.py  test_utils.py
