[project]
name = "dvhelper"
version = "0.0.0"
description = "An information scraper for avfans.com"
authors = [
    {name = "Walkline Wang", email = "walkline@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.15,>=3.10"
dependencies = [
    "urllib3 (>=2.5.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "rich-argparse (>=1.7.1,<2.0.0)",
    "webdriver-manager (>=4.0.0,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
]

[project.urls]
repository = "https://github.com/dvhelper/dvhelper"

[project.scripts]
dvhelper = "dvhelper:main"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.pytest.ini_options]
addopts = "--cache-clear"
