[project]
name = "dvhelper"
version = "0.0.0"
description = "An information scraper for avfans.com"
authors = [
    {name = "Walkline Wang", email = "walkline@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<3.15,>=3.10"
dependencies = [
    "urllib3 (>=2.5.0,<3.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "rich-argparse (>=1.7.1,<2.0.0)",
    "webdriver-manager (>=4.0.0,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "lxml (>=6.0.2,<7.0.0)",
]

[project.urls]
repository = "https://github.com/dvhelper/dvhelper"

[project.scripts]
dvhelper = "dvhelper:main"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pylint (>=4.0.1,<5.0.0)",
]

[tool.pytest.ini_options]
addopts = "--cache-clear --cov --cov-branch --cov-report=html tests/ -vv --durations=10"

[tool.pylint.main]
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "undefined-variable",
    "c-extension-no-member",
]

[tool.pylint.format]
expected-line-ending-format = "CRLF"
indent-string = "\t"
max-line-length = 88

[tool.pylint.reports]
output-format = "colorized"
